pom update, text changes

--- a/src/main/webapp/WEB-INF/includes/layout/footer.xhtml
+++ b/src/main/webapp/WEB-INF/includes/layout/footer.xhtml
@@ -5,6 +5,7 @@
     >
 
     <small>#{text['pages.footer.smallText']}</small>
+    <!-- Inhalt von ui:decorate wird in im ui:insert der contact angezeigt -->
     <ui:decorate template="/WEB-INF/decorations/contact.xhtml">
         <ui:param name="mailto" value="example" />
         <h4>#{text['pages.footer.contact']}:</h4>
