add different ways to add scripts in page as example. embed svg image in html

--- a/src/main/webapp/WEB-INF/includes/layout/header.xhtml
+++ b/src/main/webapp/WEB-INF/includes/layout/header.xhtml
@@ -7,7 +7,7 @@
     <div class="d-flex justify-content-between mb-5">
         <div>
             <a href="#{request.contextPath}/">
-                <h:graphicImage width="301" height="60" name="images/layout/playground.svg" />
+                <ui:include src="/resources/images/layout/playground.svg" />
             </a>
         </div>
         <div>
